[build-system]
requires = ["setuptools==58.0.4", "wheel==0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msdhf-net"
version = "1.0.0"
description = "PyTorch implementation of MSDHF-Net for multivariate long-term time series forecasting"
readme = "README.md"
requires-python = "==3.9.*"
license = {text = "MIT"}
authors = [{name = "MSDHF-Net Authors"}]
dependencies = [
    "numpy==1.23.5",
    "pandas==1.5.3",
    "torch==2.2.2"
]

[tool.setuptools.packages.find]
include = ["msdhf*"]
